Set processor options & fix symbol class not found.